--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
     "name": "smart-service-test",
     "version": "0.1.0",
+    "homepage": "https://MrSergeySavenko.githab.io/smart-service-test",
     "private": true,
     "dependencies": {
         "@reduxjs/toolkit": "^2.2.5",
@@ -17,6 +18,8 @@
         "web-vitals": "^2.1.4"
     },
     "scripts": {
+        "predeploy": "npm run build",
+        "deploy": "gh-pages -d build",
         "start": "react-scripts start",
         "build": "react-scripts build",
         "test": "react-scripts test",
