--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
         ]
     },
     "devDependencies": {
-        "gh-pages": "^6.1.1"
+        "gh-pages": "^6.1.1",
+        "msw": "^2.3.0"
     }
 }
