--- a/package.json
+++ b/package.json
@@ -23,8 +23,7 @@
         "start": "react-scripts start",
         "build": "react-scripts build",
         "test": "react-scripts test",
-        "eject": "react-scripts eject",
-        "server": "json-server --watch src/__data__/db.json --port 8000"
+        "eject": "react-scripts eject"
     },
     "eslintConfig": {
         "extends": [
@@ -45,7 +44,6 @@
         ]
     },
     "devDependencies": {
-        "gh-pages": "^6.1.1",
-        "msw": "^2.3.0"
+        "gh-pages": "^6.1.1"
     }
 }
